# chatBot

./: .gitignore  CMakeLists.txt  README.md  corpus.txt  dataset.cpp  dataset.h  linear.h  main.cpp  tensor.h  transformer.h  utils.h
.devcontainer/: Dockerfile  devcontainer.json
corpus/: corpus.txt  corpus10.txt  corpus11.txt  corpus13.txt  corpus14.txt  corpus15.txt  corpus16.txt  corpus17.txt  corpus18.txt  corpus19.txt  corpus2.txt  corpus20.txt  corpus21.txt  corpus22.txt  corpus23.txt  corpus24.txt  corpus25.txt  corpus26.txt  corpus27.txt  corpus28.txt  corpus29.txt  corpus3.txt  corpus30.txt  corpus31.txt  corpus32.txt  corpus33.txt  corpus34.txt  corpus35.txt  corpus36.txt  corpus37.txt  corpus38.txt  corpus39.txt  corpus4.txt  corpus40.txt  corpus41.txt  corpus42.txt  corpus5.txt  corpus6.txt  corpus7.txt  corpus8.txt  (+1 more)
